syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
import "druid.proto";
import "hunter.proto";
import "mage.proto";
import "paladin.proto";
import "priest.proto";
import "rogue.proto";
import "shaman.proto";
import "warlock.proto";
import "warrior.proto";

message Player {
		// Label used for logging.
		string name = 16;

		// The index of this player within the raid [0-24].
		int32 raid_index = 17;

    Race race = 1;
    Class class = 2;
    Spec player_spec = 18;

    EquipmentSpec equipment = 3;
    Consumes consumes = 4;
    repeated double bonus_stats = 5;

		IndividualBuffs buffs = 15;

    oneof spec {
        BalanceDruid balance_druid = 6;
        Hunter hunter = 7;
        Mage mage = 8;
        RetributionPaladin retribution_paladin = 9;
        ShadowPriest shadow_priest = 10;
        Rogue rogue = 11;
        ElementalShaman elemental_shaman = 12;
        Warlock warlock = 13;
        Warrior warrior = 14;
    }
}

message Party {
    repeated Player players = 1;

		PartyBuffs buffs = 2;

		// The index of this party within the raid [0-4].
		int32 index = 3;
}

message Raid {
    repeated Party parties = 1; 

		RaidBuffs buffs = 2;
}

message SimOptions {
    int32 iterations = 1;
    int64 random_seed = 2;
    bool debug = 3; // Enables debug logging.
    bool exit_on_oom = 4;
		bool is_test = 5; // Only used internally.
}

// ID for actions that aren't spells or items.
enum OtherAction {
    OtherActionNone = 0;
    OtherActionWait = 1;
}

message ActionID {
    // Identifies this action.
    oneof raw_id {
        int32 spell_id = 1;
        int32 item_id = 2;
        OtherAction other_id = 3;
    }

		// Distinguishes between different versions of the same action.
		// Currently the only use for this is Shaman Lightning Overload.
		int32 tag = 4;
}

// The aggregated results from all uses of a particular action.
message ActionMetrics {
		ActionID id = 1;

		// # of times this action was used by the agent.
    int32 casts = 2;

		// # of times this action hit a target. For cleave spells this can be larger than casts.
    int32 hits = 3;

		// # of times this action was a critical strike.
    int32 crits = 4;

		// # of times this action was a Miss or Resist.
    int32 misses = 5;

		// Total damage done to all targets by this action.
    double damage = 6;
}

message AuraMetrics {
		// The in-game spell ID for the aura.
		int32 id = 1;

		double uptime_seconds_avg = 2;
		double uptime_seconds_stdev = 3;
}

message DpsMetrics {
    double avg   = 1;
    double stdev = 2;
    double max   = 3;
    map<int32, int32> hist = 4;
}

// All the results for a single Player.
message PlayerMetrics {
		DpsMetrics dps = 1;

    int32 num_oom = 2;
    double oom_at_avg = 3;
    double dps_at_oom_avg = 4;

    repeated ActionMetrics actions = 5;

		repeated AuraMetrics auras = 6;
}

// Results for a whole raid.
message PartyMetrics {
		DpsMetrics dps = 1;

		repeated PlayerMetrics players = 2;
}

// Results for a whole raid.
message RaidMetrics {
		DpsMetrics dps = 1;

		repeated PartyMetrics parties = 2;
}

message TargetMetrics {
		repeated AuraMetrics auras = 1;
}

message EncounterMetrics {
		repeated TargetMetrics targets = 1;
}

// RPC RaidSim
message RaidSimRequest {
    Raid raid = 1;
    Encounter encounter = 2;
		SimOptions sim_options = 3;
}

// Result from running the raid sim.
message RaidSimResult {
		RaidMetrics raid_metrics = 1;
		EncounterMetrics encounter_metrics = 2;

		string logs = 3;
}

// RPC IndividualSim
message IndividualSimRequest {
    Player player = 1;

    RaidBuffs raid_buffs = 2;
    PartyBuffs party_buffs = 3;

    Encounter encounter = 5;
		SimOptions sim_options = 6;
}

message IndividualSimResult {
		PlayerMetrics player_metrics = 1;
		EncounterMetrics encounter_metrics = 2;

    string logs = 3;
}

// RPC GearList
message GearListRequest {
}
message GearListResult {
    repeated Item items = 1;
    repeated Enchant enchants = 2;
    repeated Gem gems = 3;
}

// RPC ComputeStats
message ComputeStatsRequest {
    Player player = 1;
    RaidBuffs raid_buffs = 2;
    PartyBuffs party_buffs = 3;
}
message ComputeStatsResult {
    repeated double gear_only = 1;
    repeated double finalStats = 2;
    repeated string sets = 3;
}

// RPC StatWeights
message StatWeightsRequest {
    Player player = 1;
    RaidBuffs raid_buffs = 2;
    PartyBuffs party_buffs = 3;
    Encounter encounter = 4;
		SimOptions sim_options = 5;

    repeated Stat stats_to_weigh = 6;
    Stat ep_reference_stat = 7;
}
message StatWeightsResult {
    repeated double weights = 1;
    repeated double weights_stdev = 2;
    repeated double ep_values = 3;
    repeated double ep_values_stdev = 4;
}
